# MS-RDAC-Implementation

./: .gitignore  prepare_kaggle_dataset.py  pyproject.toml  rdac_trainer.py  readme.md  requirements.txt  run.py  scratch_test.py  test.py  train.py
apps/: anchor_batch.py  prepare_data.py  run_experiment.py  test.py  train.py
config/test/: test_config.yaml
config/train/: train_config.yaml
configs/test/: test_config.yaml
configs/train/: train_config.yaml
log/rdac/: metrics_4.json
log/train_config_03_05_26_14_26_54/: train_config.yaml
log/train_config_03_05_26_14_54_02/: train_config.yaml
log/train_config_03_05_26_15_09_17/: log.txt
rdac/: discriminator.py  dmg.py  generator.py  kpd.py  nn_utils.py  refinement_net.py  residual_coders.py  rtsb.py  tic.py  train_utils.py
src/assessment/: metrics.py  utils.py
src/codec/: discriminator.py  dmg.py  generator.py  kpd.py  nn_utils.py  residual_coders.py  rtsb.py  tic.py  tic_utils.py
src/common/: coding_utils.py  logger.py  visualizer.py
src/entropy/: __init__.py  arithmetic_coder.py  io_utils.py  kp_entropy_coder.py
src/media/anchors/: __init__.py  hevc.py
src/media/codecs/: __init__.py  dl_codec.py
src/training/: __init__.py  disc_trainer.py  rdac_trainer.py  train_utils.py
trainers/: __init__.py  disc_trainer.py  rdac_trainer.py
utilities/metrics/: metrics.py
utilities/utils/: dataset.py
